# Arty

./: AABB-triangle-overlap.cpp  AABB-triangle-overlap.h  CMakeLists.txt  ChessboardTexture.h  Color.cpp  Color.h  Image.cpp  Image.h  ImageTexture.h  KDTree.cpp  KDTree.h  Lightsource.cpp  Lightsource.h  Links  Main.cpp  Material.h  MathFunction.cpp  MathFunction.cpp~  MathFunction.h  MathFunction.h~  MathFunction_unittest.cpp  MonochromaticTexture.h  Obstacle.h  PerlinNoise.cpp  PerlinNoise.h  PerlinTexture.h  Quad.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.cpp.orig  Raytracer.h  Scene.cpp  Scene.h  SimultaneousReads.cpp  Sphere.cpp  Sphere.h  TODO.txt  Texture.h  Triangle.cpp  (+10 more)
data/: cornell-box.xml  scene1.xml  scene2.xml  simple.xml  textureTest.xml
meshes/: bunny.off  cow.off  drei.off  sphere.off
